# geniusai-server

./: .gitignore  README.md  build.sh  genius-server.session.sql  geniusai_server.spec  pyproject.toml  run.bat  run.sh
.github/workflows/: build.yml
src/: config.py  llm_provider_base.py  llm_provider_ollama.py  routes_server.py  server_lifecycle.py  service_chroma.py
