[project]
name = "geniusai-server"
version = "0.1.0"
description = "Backend server for LrGeniusAI."
requires-python = ">=3.12"
dependencies = [
  "chromadb",
  "flask",
  "google-genai",
  "lmstudio",
  "numpy",
  "ollama",
  "open_clip_torch",
  "openai",
  "pandas",
  "pillow",
  "psutil",
  "pyinstaller",
  "requests",
  "rich",
  "waitress",
]

[tool.uv]
python-preference = "only-system"
